[package]
name = "multicrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
axum = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
shellexpand = "2.1"
